fixing little gaps

--- a/src/scss/themes/_wildcard-4.scss
+++ b/src/scss/themes/_wildcard-4.scss
@@ -8,13 +8,13 @@ body::before {
 	background-image: url("../img/wc4-playerleft.png");
     //background-size: 543px;
     background-repeat: no-repeat;
-    background-position: top right -40px;
+    background-position: top 2px right -40px;
     z-index:2;
 }
 body::after {
 	background-image: url("../img/wc4-playerright.png");
     //background-size: 600px;
     background-repeat: no-repeat;
-    background-position: top left -68px;
+    background-position: top 3px left -68px;
     z-index:3;
 }
